--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -6,7 +6,7 @@
         <div class="d-flex justify-content-between">
             <mat-form-field appearance="outline" >
                 <mat-label>First name</mat-label>
-                <input matInput type="text" placeholder="Enter First Name" formControlName="firstName">
+                <input matInput type="text" placeholder="Enter First Name" formControlName="firstName" required>
             </mat-form-field>
             <mat-form-field appearance="outline" >
                 <mat-label>Last Name</mat-label>
@@ -17,11 +17,11 @@
         <div class="row">
             <mat-form-field appearance="outline" >
                 <mat-label>Email</mat-label>
-                <input matInput type="email" placeholder="Ex. test@gmail.com" formControlName="email">
+                <input matInput type="email" placeholder="Ex. test@gmail.com" formControlName="email" required>
             </mat-form-field>
             <mat-form-field appearance="outline" >
                 <mat-label>Date of birth</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="dob">
+                <input matInput [matDatepicker]="picker" formControlName="dob" required>
                 <mat-hint>MM/DD/YYYY</mat-hint>
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
@@ -29,7 +29,7 @@
         </div>
 
         <div class="d-flex justify-content-between">
-            <mat-radio-group aria-label="Select an option" formControlName="gender">
+            <mat-radio-group aria-label="Select an option" formControlName="gender" >
                 <mat-label><b>Gender</b></mat-label>
                 <mat-radio-button value="male">Male</mat-radio-button>
                 <mat-radio-button value="female">Female</mat-radio-button>
@@ -47,7 +47,7 @@
             </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Company</mat-label>
-                <input matInput placeholder="Ex. Google" formControlName="company">
+                <input matInput placeholder="Ex. Google" formControlName="company" required>
             </mat-form-field>
         </div>
         <div class="row">
@@ -57,8 +57,8 @@
             </mat-form-field>
         </div>
     </div>
-    <div mat-dialog-actions class="d-flex justify-content-around">
-        <button class="w-25" mat-raised-button type="button" color="warn" [mat-dialog-close]="false">Cancel</button>
-        <button class="w-25" mat-raised-button color="primary" type="submit">{{data ? 'Update': 'Save'}}</button>
+    <div mat-dialog-actions class="d-flex justify-content-around p-0 px-5 pb-4">
+        <button class="w-25 p-3" mat-raised-button type="button" color="warn" [mat-dialog-close]="false">Cancel</button>
+        <button class="w-25 p-3" mat-raised-button color="primary" type="submit">{{data ? 'Update': 'Save'}}</button>
     </div>
 </form>
